--- a/templates/request.html
+++ b/templates/request.html
@@ -33,7 +33,7 @@
   </header>
   <main class="container mt-5">
     <div class="col-12 col-sm-10 col-lg-6 offset-lg-3 offset-sm-1">
-      <form action="request_done.html" class="card mb-5">
+      <form action="/request_done/" method="POST">
         <div class="card-body text-center pt-5">
           <h1 class="h3 card-title mt-4 mb-2">Подбор преподавателя</h1>
           <p class="px-5">Напишите, чего вам нужно и&nbsp;мы&nbsp;подберем отличных&nbsp;ребят</p>
@@ -41,28 +41,39 @@
         <hr>
         <div class="card-body mx-3">
           <div class="row">
-            <form action="/request_done/" method="POST">
-              <div class="col">
-                <p>Какая цель занятий?</p>
-                <div class="form-check">
-                  {{ form.goals(class="form-check-input") }}
-                </div>
+            <div class="col">
+              <p>Какая цель занятий?</p>
+              <div class="form-check">
+                {% for goal in form.goals %}
+                {{ goal }}
+                {% endfor %}
               </div>
-            </form>
+            </div>
             <div class="col">
               <p>Сколько времени есть?</p>
               <div class="form-check">
-                {{ form.availability(class="form-check-input")}}
+                {{ form.availability }}
               </div>
             </div>
           </div>
         </div>
         <hr>
         <div class="card-body mx-3">
-          <label class="mb-1 mt-2">Вас зовут</label>
-          <input class="form-control" type="text" placeholder="">
-          <label class="mb-1 mt-2">Ваш телефон</label>
-          <input class="form-control" type="text" placeholder="">
+          {% if form.errors %}
+          <ul class="errors">
+            {% for field_name, field_errors in form.errors|dictsort if field_errors %}
+            {% for error in field_errors %}
+            <li>{{ form[field_name].label }}: {{ error }}</li>
+            {% endfor %}
+            {% endfor %}
+          </ul>
+          {% endif %}
+
+          {{ form.clientName.label(class="mb-1 mt-2") }}
+          {{ form.clientName(class="form-control") }}
+
+          {{ form.clientPhone.label(class="mb-1 mt-2") }}
+          {{ form.clientPhone(class="form-control") }}
           <input type="submit" class="btn btn-primary mt-4 mb-2" value="Найдите мне преподавателя">
         </div>
       </form>
