--- a/templates/request_done.html
+++ b/templates/request_done.html
@@ -41,10 +41,10 @@
           </div>
           <hr />
           <div class="card-body mx-5">
-            <p><b>Цель занятий:</b> Для работы</p>
-            <p><b>Времени есть:</b> 1-2 часа в неделю</p>
-            <p><b>Имя:</b> Александр</p>
-            <p><b>Телефон:</b> +7 944 322 22 11</p>
+            <p><b>Цель занятий:</b> {{ goal }}</p>
+            <p><b>Времени есть:</b> {{ availability }}</p>
+            <p><b>Имя:</b> {{ clientName }}</p>
+            <p><b>Телефон:</b> {{ clientPhone }}</p>
           </div>
         </div>
       </div>
