--- a/templates/request.html
+++ b/templates/request.html
@@ -44,9 +44,7 @@
             <div class="col">
               <p>Какая цель занятий?</p>
               <div class="form-check">
-                {% for goal in form.goals %}
-                {{ goal }}
-                {% endfor %}
+                {{ form.goals }}
               </div>
             </div>
             <div class="col">
