--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
           <a href="{{ url_for('get_goal', goal='study') }}" class="btn btn-outline-secondary">🏫 Для школы</a>
           <a href="{{ url_for('get_goal', goal='work') }}" class="btn btn-outline-secondary">🏢 Для работы</a>
           <a href="{{ url_for('get_goal', goal='relocate') }}" class="btn btn-outline-secondary">🚜 Для переезда</a>
+          <a href="{{ url_for('get_goal', goal='programming') }}" class="btn btn-outline-secondary">🖥 Для Программирования</a>
         </div>
       </div>
       <h2 class="h5 text-center mb-5">Наши преподаватели</h2>
