--- a/templates/request.html
+++ b/templates/request.html
@@ -1,91 +1,49 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-  <meta charset="UTF-8">
-  <title>TINYSTEPS</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-
-<body>
-  <header class="container mt-3">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">TINYSTEPS</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Все репетиторы</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Заявка на подбор</a>
-          </li>
-        </ul>
+{% extends "base.html" %}
+{% block content %}
+<main class="container mt-5">
+  <div class="col-12 col-sm-10 col-lg-6 offset-lg-3 offset-sm-1">
+    <form action="/request_done/" method="POST">
+      <div class="card-body text-center pt-5">
+        <h1 class="h3 card-title mt-4 mb-2">Подбор преподавателя</h1>
+        <p class="px-5">Напишите, чего вам нужно и&nbsp;мы&nbsp;подберем отличных&nbsp;ребят</p>
       </div>
-      <span class="navbar-text d-sm-none d-lg-block">
-        ☺️
-      </span>
-    </nav>
-  </header>
-  <main class="container mt-5">
-    <div class="col-12 col-sm-10 col-lg-6 offset-lg-3 offset-sm-1">
-      <form action="/request_done/" method="POST">
-        <div class="card-body text-center pt-5">
-          <h1 class="h3 card-title mt-4 mb-2">Подбор преподавателя</h1>
-          <p class="px-5">Напишите, чего вам нужно и&nbsp;мы&nbsp;подберем отличных&nbsp;ребят</p>
-        </div>
-        <hr>
-        <div class="card-body mx-3">
-          <div class="row">
-            <div class="col">
-              <p>Какая цель занятий?</p>
-              <div class="form-check">
-                {{ form.goals }}
-              </div>
+      <hr>
+      <div class="card-body mx-3">
+        <div class="row">
+          <div class="col">
+            <p>Какая цель занятий?</p>
+            <div class="form-check">
+              {{ form.goals }}
             </div>
-            <div class="col">
-              <p>Сколько времени есть?</p>
-              <div class="form-check">
-                {{ form.availability }}
-              </div>
+          </div>
+          <div class="col">
+            <p>Сколько времени есть?</p>
+            <div class="form-check">
+              {{ form.availability }}
             </div>
           </div>
         </div>
-        <hr>
-        <div class="card-body mx-3">
-          {% if form.errors %}
-          <ul class="errors">
-            {% for field_name, field_errors in form.errors|dictsort if field_errors %}
-            {% for error in field_errors %}
-            <li>{{ form[field_name].label }}: {{ error }}</li>
-            {% endfor %}
-            {% endfor %}
-          </ul>
-          {% endif %}
+      </div>
+      <hr>
+      <div class="card-body mx-3">
+        {% if form.errors %}
+        <ul class="errors">
+          {% for field_name, field_errors in form.errors|dictsort if field_errors %}
+          {% for error in field_errors %}
+          <li>{{ form[field_name].label }}: {{ error }}</li>
+          {% endfor %}
+          {% endfor %}
+        </ul>
+        {% endif %}
 
-          {{ form.clientName.label(class="mb-1 mt-2") }}
-          {{ form.clientName(class="form-control") }}
+        {{ form.clientName.label(class="mb-1 mt-2") }}
+        {{ form.clientName(class="form-control") }}
 
-          {{ form.clientPhone.label(class="mb-1 mt-2") }}
-          {{ form.clientPhone(class="form-control") }}
-          <input type="submit" class="btn btn-primary mt-4 mb-2" value="Найдите мне преподавателя">
-        </div>
-      </form>
-    </div>
-  </main>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+        {{ form.clientPhone.label(class="mb-1 mt-2") }}
+        {{ form.clientPhone(class="form-control") }}
+        <input type="submit" class="btn btn-primary mt-4 mb-2" value="Найдите мне преподавателя">
+      </div>
+    </form>
+  </div>
+</main>
+{% endblock %}
