--- a/templates/request.html
+++ b/templates/request.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main class="container mt-5">
   <div class="col-12 col-sm-10 col-lg-6 offset-lg-3 offset-sm-1">
-    <form action="/request_done/" method="POST">
+    <form action="/request_done/" method="POST" class="card mb-5">
       <div class="card-body text-center pt-5">
         <h1 class="h3 card-title mt-4 mb-2">Подбор преподавателя</h1>
         <p class="px-5">Напишите, чего вам нужно и&nbsp;мы&nbsp;подберем отличных&nbsp;ребят</p>
@@ -13,13 +13,17 @@
           <div class="col">
             <p>Какая цель занятий?</p>
             <div class="form-check">
-              {{ form.goals }}
+              {% for subfield in form.goals %}
+              {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }} <br>
+              {% endfor %}
             </div>
           </div>
           <div class="col">
             <p>Сколько времени есть?</p>
             <div class="form-check">
-              {{ form.availability }}
+              {% for subfield in form.availability %}
+              {{ subfield(class="form-check-input") }} {{ subfield.label(class="form-check-label") }} <br>
+              {% endfor %}
             </div>
           </div>
         </div>
