--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <div class="text-center mb-5">
       <div class="btn-group mx-auto mb-0" role="group" aria-label="Basic example">
         <a href="{{ url_for('get_goal', goal='travel') }}" class="btn btn-outline-secondary">⛱Для путешествий</a>
-        <a href="{{ url_for('get_goal', goal='study') }}" class="btn btn-outline-secondary">🏫 Для школы</a>
+        <a href="{{ url_for('get_goal', goal='study') }}" class="btn btn-outline-secondary">🏫 Для учебы</a>
         <a href="{{ url_for('get_goal', goal='work') }}" class="btn btn-outline-secondary">🏢 Для работы</a>
         <a href="{{ url_for('get_goal', goal='relocate') }}" class="btn btn-outline-secondary">🚜 Для переезда</a>
         <a href="{{ url_for('get_goal', goal='programming') }}" class="btn btn-outline-secondary">🖥 Для
-          Программирования</a>
+          программирования</a>
       </div>
     </div>
     <h2 class="h5 text-center mb-5">Наши преподаватели</h2>
