--- a/templates/booking.html
+++ b/templates/booking.html
@@ -3,7 +3,7 @@
 <main class="container mt-3">
   <div class="row mt-5">
     <div class="col-10 col-md-6 offset-1 offset-md-3 mb-3">
-      <form action="/booking_done/" method="POST" class="card mb-3">
+      <form action="{{ url_for('save_booking') }}" method="POST" class="card mb-3">
         <div class="card-body text-center pt-5">
           <img src="{{ picture }}" class="mb-3" width="95" alt="">
           <h2 class="h5 card-title mt-2 mb-2">{{ name }}</h2>
