--- a/templates/goal.html
+++ b/templates/goal.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-12 col-lg-10 offset-lg-1 m-auto">
-      {%for teacher in teachers_list|sort(attribute="rating", reverse=True) %}
+      {% for teacher in teachers_list %}
       <div class="card mb-4">
         <div class="card-body">
           <div class="row">
