--- a/templates/booking.html
+++ b/templates/booking.html
@@ -8,7 +8,7 @@
           <img src="{{ picture }}" class="mb-3" width="95" alt="">
           <h2 class="h5 card-title mt-2 mb-2">{{ name }}</h2>
           <p class="my-1">Запись на пробный урок</p>
-          <p class="my-1">{{ day }}, {{ hour }}</p>
+          <p class="my-1">{{ week[day] }}, {{ hour }}</p>
         </div>
         <hr />
         <div class="card-body mx-3">
