--- a/templates/goal.html
+++ b/templates/goal.html
@@ -17,12 +17,12 @@
               <p>{{ teacher['about'] }}</p>
               <a href="{{ url_for('get_teacher', id=teacher['id']) }}"
                 class="btn btn-outline-primary btn-sm mr-3 mb-2">Показать информаци и расписание</a>
-
             </div>
           </div>
         </div>
       </div>
       {% endfor %}
+      {{teachers_id}}
     </div>
   </div>
 
