--- a/templates/booking_done.html
+++ b/templates/booking_done.html
@@ -13,7 +13,7 @@
         <hr />
         <div class="card-body mx-5">
           <p><b>Тема:</b> Пробный урок</p>
-          <p><b>Дата:</b> {{ clientWeekday }}, {{ clientTime }}</p>
+          <p><b>Дата:</b> {{ week[clientWeekday] }}, {{ clientTime }}</p>
           <p><b>Имя:</b> {{ clientName }}</p>
           <p><b>Телефон:</b> {{ clientPhone }}</p>
         </div>
