--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <h2 class="h5 text-center mb-5">Наши преподаватели</h2>
     <div class="row">
       <div class="col-12 col-lg-10 offset-lg-1 m-auto">
-        {%for teacher in teachers_list|sort(attribute="rating", reverse=True) %}
+        {%for teacher in teachers_list %}
         <div class="card mb-4">
           <div class="card-body">
             <div class="row">
